Support mute sounds and skp video in android native sdk